Update and rename Moore_AnimateAnyone.ipynb to Moore_AnimateAnyone_Gradio_UI.ipynb

--- a/Moore_AnimateAnyone_Gradio_UI.ipynb
+++ b/Moore_AnimateAnyone_Gradio_UI.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Nick088Official/Moore-AnimateAnyone-Colab/blob/main/Moore_AnimateAnyone.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Nick088Official/Moore-AnimateAnyone-Colab/blob/main/Moore_AnimateAnyone_Gradio_UI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,7 +16,7 @@
         "id": "WNxZx3UnXJ8C"
       },
       "source": [
-        "# Moore-AnimateAnyone\n",
+        "# Moore-AnimateAnyone Gradio UI\n",
         "\n",
         "[Moore-AnimateAnyone Official Github Repo](https://github.com/MooreThreads/Moore-AnimateAnyone)\n",
         "\n",
