--- a/Moore_AnimateAnyone_Gradio_UI.ipynb
+++ b/Moore_AnimateAnyone_Gradio_UI.ipynb
@@ -20,7 +20,9 @@
         "\n",
         "[Moore-AnimateAnyone Official Github Repo](https://github.com/MooreThreads/Moore-AnimateAnyone)\n",
         "\n",
-        "Google Colab Made by [Nick088](https:linktr.ee/Nick088)"
+        "Google Colab Made by [Nick088](https:linktr.ee/Nick088)",
+        "\n",
+        "**WARNING: COULD RISK YOUR FREE TIER COLAB ACC**"
       ]
     },
     {
