--- a/Moore_AnimateAnyone_Gradio_UI.ipynb
+++ b/Moore_AnimateAnyone_Gradio_UI.ipynb
@@ -20,7 +20,7 @@
         "\n",
         "[Moore-AnimateAnyone Official Github Repo](https://github.com/MooreThreads/Moore-AnimateAnyone)\n",
         "\n",
-        "Google Colab Made by [Nick088](https:linktr.ee/Nick088)",
+        "Google Colab Made by [Nick088](https:linktr.ee/Nick088)\n",
         "\n",
         "**WARNING: COULD RISK YOUR FREE TIER COLAB ACC**"
       ]
@@ -67,7 +67,6 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyONVlL9DuIsSWa0HFOe/j83",
       "include_colab_link": true
     },
     "kernelspec": {
