--- a/Moore_AnimateAnyone_Gradio_UI.ipynb
+++ b/Moore_AnimateAnyone_Gradio_UI.ipynb
@@ -22,7 +22,9 @@
         "\n",
         "Google Colab Made by [Nick088](https:linktr.ee/Nick088)\n",
         "\n",
-        "**WARNING: COULD RISK YOUR FREE TIER COLAB ACC**"
+        "**WARNING: COULD RISK YOUR FREE TIER COLAB ACC**\n",
+        "\n",
+        "**GPU IS NEEDED FOR THIS COLAB TO RUN**: Runtime->Change Runtime Type->T4 (free daily gpu) or any other paid gpu"
       ]
     },
     {
