--- a/Moore_AnimateAnyone_Gradio_UI.ipynb
+++ b/Moore_AnimateAnyone_Gradio_UI.ipynb
@@ -40,6 +40,8 @@
         "\n",
         "#@markdown If it tells you to restart runtime, just click cancel\n",
         "\n",
+        "from IPython.display import clear_output\n",
+        "\n",
         "!git clone https://huggingface.co/spaces/Nick088/Moore-AnimateAnyone\n",
         "\n",
         "%cd Moore-AnimateAnyone\n",
@@ -64,7 +66,10 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lambdalabs/sd-image-variations-diffusers/raw/main/image_encoder/config.json -d /content/Moore-AnimateAnyone/pretrained_weights/image_encoder -o config.json\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lambdalabs/sd-image-variations-diffusers/resolve/main/image_encoder/pytorch_model.bin -d /content/Moore-AnimateAnyone/pretrained_weights/image_encoder -o pytorch_model.bin\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/AnimateAnyone/resolve/main/dw-ll_ucoco_384.onnx -d /content/Moore-AnimateAnyone/pretrained_weights/DWPose -o dw-ll_ucoco_384.onnx\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/AnimateAnyone/resolve/main/yolox_l.onnx -d /content/Moore-AnimateAnyone/pretrained_weights/DWPose -o yolox_l.onnx"
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/AnimateAnyone/resolve/main/yolox_l.onnx -d /content/Moore-AnimateAnyone/pretrained_weights/DWPose -o yolox_l.onnx\n",
+        "\n",
+        "clear_output()\n",
+        "print(\"Installed!\")"
       ]
     },
     {
